[todo-node-tests] Add a node with two attrs

--- a/data/test.simple.html
+++ b/data/test.simple.html
@@ -24,7 +24,7 @@
     </table>
     <span id="test">Test</span>
     <div id="wrap">
-      <span id="wrapped">Wrapped</span>
+      <span class="wrapped-span" id="wrapped">Wrapped</span>
     </div>
     <h1 id="footer">Feet</h1>
   </body>
